# AdjointAcceleratorOptimization

./: .gitignore  CMakeLists.txt  README.md  setup.py
AAO/: CMakeLists.txt
AAO/Sim/: CMakeLists.txt
AAO/Sim/scripts/AdjointFTR/: exampleOptRun.py  examplerun.py
AAO/Sim/scripts/AdjointFTR/momentSolver/: Magnets.py  MomentSolver.py
AAO/Sim/scripts/AdjointFTR/pythonBindings/: adjointFTRBindings.py
AAO/Sim/scripts/AdjointFTR/system/bbcFTR/: magnetParameters.py  optParameters.py
AAO/Sim/src/: CMakeLists.txt
AAO/Sim/src/AdjointFTR/: AdjointFTR.cpp  AdjointFTR.h  CMakeLists.txt
